@@ -1,4 +1,4 @@
-.TH SDPARM "8" "December 2012" "sdparm\-1.08" SDPARM
+.TH SDPARM "8" "February 2013" "sdparm\-1.08" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
@@ -758,7 +758,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2005\-2012 Douglas Gilbert
+Copyright \(co 2005\-2013 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
